hphp/test/slow/object_property/701.php.expectf
NULL
NULL
NULL
NULL
HipHop Fatal error: Cannot access empty property in %s/hphp/test/slow/object_property/701.php on line 3
